# nascent

./: .gitignore  ChangeLog.md  README.md  nascent.cabal  package.yaml
src/: Nascent.hs
src/Nascent/: Error.hs  Exception.hs  Formula.hs  KNearestNeighbor.hs
test/: FormulaSpec.hs  KNearestNeighborSpec.hs
