name:           nascent
version:        0.0.1.0
description:    A Haskell machine learning library
homepage:       https://github.com/cmoncur/nascent#readme
bug-reports:    https://github.com/cmoncur/nascent/issues
author:         Cody Moncur
maintainer:     Cody Moncur
copyright:      2018 Cody Moncur
license:        MIT
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/cmoncur/nascent

library
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      base >=4.7 && <5
  exposed-modules:
      Nascent,
      Nascent.KNearestNeighbor
  other-modules:
      Paths_nascent
  default-language: Haskell2010

test-suite nascent-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5,
      nascent
  other-modules:
      Paths_nascent
  default-language: Haskell2010

-- TODO: For testing only. Remove upon stable release.
executable nascent-exe
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5,
      nascent
  other-modules:
      Paths_nascent
  default-language: Haskell2010
